tests/specs/ecosystem/bureaudouble_forks/react_style_singleton/0_0_2.test
bureaudouble-forks/react-style-singleton/0.0.2
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLStyleElement'.
type NullableStyle = HTMLStyleElement | null;
                     ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/singleton.ts:1:22

TS2304 [ERROR]: Cannot find name 'HTMLStyleElement'.
function injectStyles(tag: HTMLStyleElement, css: string): void {}
                           ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/singleton.ts:5:28

TS2304 [ERROR]: Cannot find name 'HTMLStyleElement'.
function insertStyleTag(tag: HTMLStyleElement): void {}
                             ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/singleton.ts:6:30

Found 3 errors.

